# pyvectorguidance

./: .gitignore  .gitmodules  .releaserc.json  CHANGELOG.md  MANIFEST  README.md  build.py  pyproject.toml  pyvectorguidance_setup.py  requirements.txt  setup.cfg  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: main.yml  pypi.yml  release.yml  semantic-release.yml
examples/: bounded_interception.py  dynamics.py  utilities.py
pyvectorguidance/: CMakeLists.txt  VectorGuidance.py  __init__.py  wrapper.cpp
tests/: test_bounded_interception.py  test_soft_landing_lq.py  tests.py
