[tool.poetry]
name = "pyvectorguidance"
version = "0.0.1"
description = "Vecotr guidance for python"
authors = ["Iftach Naftaly <iftahnaf@proton.me>"]
license = "Apache-2.0"
keywords = ["guidance", "control", "autonomous-systems"]
readme = "README.md"
homepage = "https://github.com/iftahnaf/pyvectorguidance"
repository = "https://github.com/iftahnaf/pyvectorguidance"
include = [
    "LICENSE",
]

packages = [
    { include = "pyvectorguidance", from = "pyvectorguidance" },
]


[tool.poetry.urls]
"Changelog" = "https://github.com/iftahnaf/pyvectorguidance/blob/main/CHANGELOG.md"


[tool.semantic_release]
version_variable = [
    "pyvectorguidance/__init__.py:__version__"
]
version_toml = [
    "pyproject.toml:tool.poetry.version"
]

branch = "main"
upload_to_pypi = true
upload_to_release = true
build_command = "pip install poetry && poetry build"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
click = ">=7"
toml = ">=0.10.2"
rich = ">=10.14.0"
typing-extensions = { version = ">=4.5.0", python = "<3.11" }

[tool.poetry.group.dev.dependencies]
control="0.9.4"
matplotlib="3.8.0"
numpy="1.21.5"
Pillow="10.0.1"
pybind11-global="2.11.1"
pyparsing="3.1.1"
PyQt5="5.15.6"
PyQt5-sip="12.9.1"
pyqtgraph="0.13.3"
rich="13.3.1"
scipy="1.10.0"
python-semantic-release = "^7.33.5"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
extra_standard_library = ["pytest", "toml", "click", "typing_extensions"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"