[tool.poetry]
name = "pyvectorguidance"
version = "0.0.1"
description = "Vecotr guidance for python"
authors = ["Iftach Naftaly <iftahnaf@proton.me>"]
license = "Apache-2.0"
keywords = ["guidance", "control", "autonomous-systems"]
readme = "README.md"
homepage = "https://github.com/iftahnaf/pyvectorguidance"
repository = "https://github.com/iftahnaf/pyvectorguidance"
include = [
    "LICENSE",
]

# packages = [
#     { include = "pyvectorguidance", from = "pyvectorguidance" },
# ]
packages = [
    { include = "pyvectorguidance" },
]


[tool.poetry.urls]
"Changelog" = "https://github.com/iftahnaf/pyvectorguidance/blob/main/CHANGELOG.md"


[tool.semantic_release]
version_variable = [
    "pyvectorguidance/__init__.py:__version__"
]
version_toml = [
    "pyproject.toml:tool.poetry.version"
]

branch = "main"
upload_to_pypi = true
upload_to_release = true
build_command = "pip install poetry && poetry build"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
toml = ">=0.10.2"
cython = ">=3.0.8"

[tool.poetry.group.dev.dependencies]
control="0.9.4"
matplotlib="3.8.0"
numpy="1.21.5"
Pillow="10.0.1"
pybind11-global="2.11.1"
pyparsing="3.1.1"
rich="13.3.1"
scipy="1.10.0"
python-semantic-release = "^7.33.5"
Cython = "3.0.8"

[tool.poetry.build]
script = "build.py"

[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "ninja",
    "cmake>=3.12",
    "Cython>=3.0.8",
    "pybind11-global>=2.11.1",
    "poetry>=1.1.0",
    "python-semantic-release>=7.33.5",
    "numpy>=1.21.5",
]
build-backend = "setuptools.build_meta"
