[tool.poetry]
name = "pyvectorguidance"
version = "0.0.1"
description = "Vector guidance for Python"
authors = ["Iftach Naftaly <iftahnaf@proton.me>"]
license = "Apache-2.0"
keywords = ["guidance", "control", "autonomous-systems"]
readme = "README.md"
homepage = "https://github.com/iftahnaf/pyvectorguidance"
repository = "https://github.com/iftahnaf/pyvectorguidance"
include = [
    "LICENSE",
]

packages = [
    { include = "pyvectorguidance" },
]

[tool.poetry.urls]
"Changelog" = "https://github.com/iftahnaf/pyvectorguidance/blob/main/CHANGELOG.md"

[tool.semantic_release]
version_variable = [
    "pyvectorguidance/__init__.py:__version__"
]
version_toml = [
    "pyproject.toml:tool.poetry.version"
]

build_command = "cd pyvectorguidance && mkdir build && cd build &&  cmake .. && make"

branch = "main"
upload_to_pypi = true
upload_to_release = true

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
cython = "^3.0.8"
control = "^0.9.4"
matplotlib = "^3.8.0"
numpy = "^1.21.5"
Pillow = "^10.0.1"
pybind11 = "^2.7.1"
pyparsing = "^3.1.1"
rich = "^13.3.1"
scipy = "^1.10.0"
python-semantic-release = "^7.33.5"

[build-system]
requires = ["poetry-core>=1.0.0", "cmake>=3.18", "ninja>=1.10.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["pyvectorguidance"]

[tool.mypy]
files = ["pybind11"]
python_version = "3.10"
strict = true
show_error_codes = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true